--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <h1>NekoDevs IPA Installer</h1>
-  <a href="itms-services://?action=download-manifest&url=https://yourdomain.com/manifest.plist" class="button">
+  <a href="itms-services://?action=download-manifest&url=https://imalwaysad.github.io/nekodevs-ipa/manifest.plist" class="button">
     📲 Install NekoDevs App
   </a>
 </body>
